git_autoupdate HC-color -> base.css
Moved Hardcoded color style from `lib/class/autoupdate.class.php/` to
base.css and added an ID to the div.

--- a/templates/base.css
+++ b/templates/base.css
@@ -282,6 +282,10 @@ a.tag_size1, a.tag_size2, a.tag_size3, a.tag_size4 { text-decoration: none; }
     transform: scaleX(-1);
 }
 
+div#git_autoupdate font {
+    color: #ff0000;
+}
+
 #notification {
 	position: fixed;
     top: auto;
